Nav bar removed, text removed

--- a/src/homepage_template.html
+++ b/src/homepage_template.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -22,38 +22,9 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="/">Cooking 4mula</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="/">Home</a></li>
-              <li><a href="#about">About</a></li>
-              <li><a href="#contact">Contact</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
     
     <header class="jumbotron subhead">
       <div class="container">
-        <h3>Do you</h3>
-        <ol>
-          <li>Love food? </li>
-          <li>Love your bodies even more!</li>
-          <li>Have an artistic bent?</li>
-          <li>Enjoy your time in the kitchen? </li>
-        </ol>
-        You've come to the right place - <a href="http://cooking4mula.appspot.com">cooking4mula.appsot.com</a>.
-	<br>
-        Now <b>Scroll down!</b> for recipes of tasty, healthy artistic food that you can cook in minutes.
         <div class="hero-unit">
           <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
