--- a/src/homepage_template.html
+++ b/src/homepage_template.html
@@ -7,12 +7,6 @@
     <meta name="keywords" content="recipes, healthy food, tasty food, elegant food">
 
     <link href="static_files/bootstrap.min.css" rel="stylesheet">
-    <style>
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px; 
-      }
-    </style>
     <link href="static_files/bootstrap-responsive.min.css" rel="stylesheet">
 
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -22,9 +16,11 @@
   </head>
 
   <body>
-    
     <header class="jumbotron subhead">
       <div class="container">
+	    <a href="/" title="Cooking 4mula">
+		   <img src="static_files/cooking4mula.jpg" alt="Cooking 4mula">
+	    </a>
         <div class="hero-unit">
           <div id="myCarousel" class="carousel slide">
             <div class="carousel-inner">
